--- a/RSA.ipynb
+++ b/RSA.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center>RSA<h3>Diego Felipe Sánchez Medina</h3><h5>dsanchezme@unal.edu.co</h5></center>"
+    "<center>RSA<h3>Diego Felipe Sanchez Medina</h3><h5>dsanchezme@unal.edu.co</h5></center>"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Desarrollo matemático del algoritmo\n",
+    "## Desarrollo matematico del algoritmo\n",
     "\n",
     "El algoritmo RSA es un sistema que permite la comunicación segura entre un emisor, que se nombra E, y un receptor, R. Se supone que ambos pueden ejecutar en sus respectivas máquinas las operaciones que deseen, y guardar la información que precisen, sin que ésta sea conocida por nadie. No obstante, cuando el emisor mande un mensaje encriptado al receptor no puede estar seguro de que el canal no sea espiado, y por ello su objetivo es que, aunque el mensaje encriptado sea interceptado por un espía, éste no podrá desencriptarlo, ni por lo tanto entenderlo.\n",
     "\n",
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Implementación del algoritmo "
+    "## Implementacion del algoritmo "
    ]
   },
   {
