--- a/RSA.ipynb
+++ b/RSA.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#<center>RSA<h3>Diego Felipe Sanchez Medina</h3><h5>dsanchezme@unal.edu.co</h5></center>"
+    "#RSA\n","Diego Felipe Sanchez Medina\n","dsanchezme@unal.edu.co"
    ]
   },
   {
