--- a/RSA.ipynb
+++ b/RSA.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center>#RSA\n</enter>","###Diego Felipe Sanchez Medina\n","###dsanchezme@unal.edu.co"
+    "# <center>RSA</enter>","## <center>Diego Felipe Sanchez Medina</center>","### <center>dsanchezme@unal.edu.co</center>"
    ]
   },
   {
