--- a/RSA.ipynb
+++ b/RSA.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center>RSA</enter>","## <center>Diego Felipe Sanchez Medina</center>","### <center>dsanchezme@unal.edu.co</center>"
+    "# RSA","## Diego Felipe Sanchez Medina","### dsanchezme@unal.edu.co"
    ]
   },
   {
@@ -63,7 +63,7 @@
     "\n",
     "$\\textbf{Definicion: }$Se define la funcion multiplicativa de Euler, $\\phi(r)$, como el número de números enteros mayores o iguales que 1 y menores que $r$ que son primos relativos con él, es decir: \n",
     "\n",
-    "<center>$\\phi(r)=\\#\\{s$ $|$ $s\\geq1$ y $s<r$ y $mcd(s,r)=1\\}$</center>\n",
+    "$\\phi(r)=\\#\\{s$ $|$ $s\\geq1$ y $s<r$ y $mcd(s,r)=1\\}$\n",
     "    \n",
     "    \n",
     "\n",
