--- a/RSA.ipynb
+++ b/RSA.ipynb
@@ -4,12 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RSA {align=center}\n","## Diego Felipe Sanchez Medina\n","### dsanchezme@unal.edu.co\n"
+    "# <center>RSA</center> \n","## Diego Felipe Sanchez Medina\n","### dsanchezme@unal.edu.co\n"
     
    ]
-   .elementor-headline--style-rotate .elementor-headline-dynamic-wrapper {
-    text-align: center;
-   }
   },
   {
    "cell_type": "markdown",
