--- a/RSA.ipynb
+++ b/RSA.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center>RSA</center> \n","## Diego Felipe Sanchez Medina\n","### dsanchezme@unal.edu.co\n"
+    "\t\t\t# RSA \n","## Diego Felipe Sanchez Medina\n","### dsanchezme@unal.edu.co\n"
     
    ]
   },
