--- a/RSA.ipynb
+++ b/RSA.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\t\t\t# RSA \n","## Diego Felipe Sanchez Medina\n","### dsanchezme@unal.edu.co\n"
+    "#             RSA \n","##          Diego Felipe Sanchez Medina\n","###          dsanchezme@unal.edu.co\n"
     
    ]
   },
