--- a/RSA.ipynb
+++ b/RSA.ipynb
@@ -60,9 +60,9 @@
     "5. El emisor $E$, que desea enviarle el mensaje confidencial $M$ a $R$, lo encripta del siguiente modo: $C=M^{e}$ (mod $n$). $E$ puede hacer este proceso de cifrado ya que conoce los números $e$ y $n$ que $R$ hizo públicos. Ahora, envía el número $C$, que es el mensaje $M$ encriptado.\n",
     "6. El receptor $R$ recibe un número $C$ y ejecuta con él la siguiente operación: $M=C^{d}$ (mod $n$), donde $d$ es conocido en la clave privada. Luego, $R$ puede conocer el mensaje $M$ que $E$ le envió.\n",
     "\n",
-    "$\\textbf{Teorema 1. Funcion multiplicativa de Euler}$\n",
+    "\textbf{Teorema 1. Funcion multiplicativa de Euler}\n",
     "\n",
-    "$\\textbf{Definicion: }$Se define la funcion multiplicativa de Euler, $\\phi(r)$, como el número de números enteros mayores o iguales que 1 y menores que $r$ que son primos relativos con él, es decir: \n",
+    "\textbf{Definicion: }Se define la funcion multiplicativa de Euler, $\\phi(r)$, como el número de números enteros mayores o iguales que 1 y menores que $r$ que son primos relativos con él, es decir: \n",
     "\n",
     "$\\phi(r)=\\#\\{s$ $|$ $s\\geq1$ y $s<r$ y $mcd(s,r)=1\\}$\n",
     "    \n",
