--- a/RSA.ipynb
+++ b/RSA.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "\textbf{Definicion: }Se define la funcion multiplicativa de Euler, $\\phi(r)$, como el número de números enteros mayores o iguales que 1 y menores que $r$ que son primos relativos con él, es decir: \n",
     "\n",
-    "$\\phi(r)=\\#\\{s$ $|$ $s\\geq1$ y $s<r$ y $mcd(s,r)=1\\}$\n",
+    "$$\\phi(r)=\\#\\{s$ $|$ $s\\geq1$ y $s<r$ y $mcd(s,r)=1\\}$$\n",
     "    \n",
     "    \n",
     "\n",
