--- a/RSA.ipynb
+++ b/RSA.ipynb
@@ -92,7 +92,7 @@
     "3. Como el máximo común divisor entre $48$ y $5$ es $1$ y $1<5<72$, escoge $e=5$ y así, ya tiene su clave pública: $(65,5)$\n",
     "4. Ahora, calcula el inverso de 11 módulo 24 de la siguiente forma:\n",
     "    - Sabe que \n",
-    "        \\begin{align*}48 & =9\\cdot5+3\\\\5 & =1\\cdot3+2\\\\3 & =1\\cdot2+1\\\\\\\\1 & =3-1\\cdot2\\\\2 & =5-1\\cdot3\\\\3 & =48-9\\cdot5\\\\\\\\1 & =3-1\\cdot(5-1\\cdot3)\\\\ & =3-5+3=2\\cdot3-5\\\\ & =2\\cdot(48-9\\cdot5)-5\\\\ & =2\\cdot48-18\\cdot5-5\\\\ & =2\\cdot48-19\\cdot5\\end{align*}\n",
+    "        $\\begin{align*}48 & =9\\cdot5+3\\\\5 & =1\\cdot3+2\\\\3 & =1\\cdot2+1\\\\\\\\1 & =3-1\\cdot2\\\\2 & =5-1\\cdot3\\\\3 & =48-9\\cdot5\\\\\\\\1 & =3-1\\cdot(5-1\\cdot3)\\\\ & =3-5+3=2\\cdot3-5\\\\ & =2\\cdot(48-9\\cdot5)-5\\\\ & =2\\cdot48-18\\cdot5-5\\\\ & =2\\cdot48-19\\cdot5\\end{align*}$\n",
     "        \n",
     "        Luego, concluye que $d=48-19=29$. Su clave privada es entonces $(65,29)$.\n",
     "María sabe que la clave pública de Juan es $(65,5)$, entonces para enviarle el mensaje $M=20$, lo encrita así: $C=M^{e}$ $($mod $n)={20}^{5}$ $($mod $65)=3200000$ $($mod $65)=50$\n",
