--- a/RSA.ipynb
+++ b/RSA.ipynb
@@ -62,11 +62,11 @@
     "5. El emisor $E$, que desea enviarle el mensaje confidencial $M$ a $R$, lo encripta del siguiente modo: $C=M^{e}$ (mod $n$). $E$ puede hacer este proceso de cifrado ya que conoce los números $e$ y $n$ que $R$ hizo públicos. Ahora, envía el número $C$, que es el mensaje $M$ encriptado.\n",
     "6. El receptor $R$ recibe un número $C$ y ejecuta con él la siguiente operación: $M=C^{d}$ (mod $n$), donde $d$ es conocido en la clave privada. Luego, $R$ puede conocer el mensaje $M$ que $E$ le envió.\n",
     "\n",
-    "$\\textbf{Teorema 1. Función multiplicativa de Euler}$\n",
+    "$\\textbf{Teorema 1. Funcion multiplicativa de Euler}$\n",
     "\n",
-    "$\\textbf{Definición: }$Se define la función multiplicativa de Euler, $\\phi(r)$, como el número de números enteros mayores o iguales que 1 y menores que $r$ que son primos relativos con él, es decir: \n",
+    "$\\textbf{Definicion: }$Se define la funcion multiplicativa de Euler, $\\phi(r)$, como el número de números enteros mayores o iguales que 1 y menores que $r$ que son primos relativos con él, es decir: \n",
     "\n",
-    "<center>$\\phi(r)=\\#\\{s$ $|$ $s\\geq1$ y $s<r$ y $mcd(s,r)=1\\}$</center>\n",
+    "$\\phi(r)=\\#\\{s$ $|$ $s\\geq1$ y $s<r$ y $mcd(s,r)=1\\}$\n",
     "    \n",
     "    \n",
     "\n",
@@ -92,7 +92,7 @@
     "3. Como el máximo común divisor entre $48$ y $5$ es $1$ y $1<5<72$, escoge $e=5$ y así, ya tiene su clave pública: $(65,5)$\n",
     "4. Ahora, calcula el inverso de 11 módulo 24 de la siguiente forma:\n",
     "    - Sabe que \n",
-    "        $\\begin{align*}48 & =9\\cdot5+3\\\\5 & =1\\cdot3+2\\\\3 & =1\\cdot2+1\\\\\\\\1 & =3-1\\cdot2\\\\2 & =5-1\\cdot3\\\\3 & =48-9\\cdot5\\\\\\\\1 & =3-1\\cdot(5-1\\cdot3)\\\\ & =3-5+3=2\\cdot3-5\\\\ & =2\\cdot(48-9\\cdot5)-5\\\\ & =2\\cdot48-18\\cdot5-5\\\\ & =2\\cdot48-19\\cdot5\\end{align*}$\n",
+    "        \n$\\begin{align*}48 & =9\\cdot5+3\\\\5 & =1\\cdot3+2\\\\3 & =1\\cdot2+1\\\\\\\\1 & =3-1\\cdot2\\\\2 & =5-1\\cdot3\\\\3 & =48-9\\cdot5\\\\\\\\1 & =3-1\\cdot(5-1\\cdot3)\\\\ & =3-5+3=2\\cdot3-5\\\\ & =2\\cdot(48-9\\cdot5)-5\\\\ & =2\\cdot48-18\\cdot5-5\\\\ & =2\\cdot48-19\\cdot5\\end{align*}$\n",
     "        \n",
     "        Luego, concluye que $d=48-19=29$. Su clave privada es entonces $(65,29)$.\n",
     "María sabe que la clave pública de Juan es $(65,5)$, entonces para enviarle el mensaje $M=20$, lo encrita así: $C=M^{e}$ $($mod $n)={20}^{5}$ $($mod $65)=3200000$ $($mod $65)=50$\n",
